<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TripActivity!</string>
    <string name="app_name">露意出行</string>
    <string name="txt_phoneno">手机号码:</string>
    <string name="txt_username">用 户 名</string>
    <string name="txt_email">邮箱地址:</string>
    <string name="txt_password">设置密码:</string>
    <string name="txt_password2">重复密码</string>
    <string name="txt_hint_phoneno">11位有效手机号码</string>
    <string name="txt_hint_username">2-16位数字和字母</string>
    <string name="txt_hint_password">密码:4-30位数字和字母</string>
    <string name="txt_hint_password2">请再次输入密码</string>
    <string name="txt_reg_name"><u>免费注册成为会员</u></string>
    <string name="txt_login_name">登 录</string>
    <string name="txt_login_top_name">服务随行，消费返现</string>
    <string name="txt_userno_title">帐 号:</string>
    <string name="txt_pwd_title">密 码:</string>
    <string name="txt_findpwd_title">找回密码</string>
    <string name="txt_order_title">订单管理</string>
    <string name="txt_reg_name2">注 册</string>
    <string name="txt_personcenter_title">我的资料</string>
    <string name="txt_personcenter_order">我的订单</string>
    <string name="txt_changephoneno_title">修改手机号码</string>
    <string name="txt_changepwd_title">修改密码</string>
    <string name="txt_error_edittext">请重新输入</string>
    <string name="txt_error_pwd">请2次输入一样的密码</string>
    <string name="txt_error_pwdlength">密码长度至少4位</string>
    <string name="txt_error_phone">请输入11位有效手机号码</string>
    <string name="suggestion_top">欢迎您提出宝贵的意见和建议,将会成为我们成长的动力.</string>
    <string name="txt_search_more"><u>查看更多>></u></string>
    <string name="txt_have_reg"><u>已经有露意的帐号>></u></string>
    <string name="txt_get_code"><u>点击获取短信验证码>></u></string>
    <string name="txt_get_pwd"><u>找回密码</u></string>
    <string name="txt_about_us"><u>关于露意</u></string>
    <string name="txt_about_vip_info"><u> 关于返现和账户 </u></string>
    <string name="txt_getvip"><u>开通会员获得更多返现,露意官方网站申请!</u></string>
    <string name="txt_validate_phone">请输入11位有效手机号码</string>
    <string name="txt_validate_email">请输入正确的Email地址</string>
    <string name="txt_alipayno_info">此账户将用于现金返还、提现与充值，请确保准确无误.</string>
    <string name="txt_about_us_info" />
    <string name="vip_info" />
    <string name="maps_api_key">c2b0f58a6f09cafd1503c06ef08ac7aeb7ddb91ae1c6afb4e346726af4240fc725e679d0f0577dfb</string>
    <string name="search_title">搜索关键字</string>
    <string name="user_agree_title"><u>用户协议</u></string>
    <string name="user_agree">"露意承诺不会将您的联系方法向任何无关的第三方透露。
1．露意服务条款的确认
露意的所有权与运作权归北京乐乐互动科技有限公司（以下简称露意）所有。本服务条款具有法律约束力。一旦您点选注册并通过注册程序，即表示您自愿接受本协议之所有条款，并已成为露意的注册会员。
用户在享用露意络会员服务的同时，同意接受露意络会员服务提供的各类信息服务。
2．服务内容
2.1 露意服务的具体内容由露意根据实际情况提供，露意对其所提供之服务拥有最终解释权。
2.2 露意在露意上向其会员提供相关网络服务，与相关网络服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费）均由会员自行负担。 
3．会员帐号及密码
您注册会员成功后，将得到一个帐号和密码。您应妥善保管该帐号及密码，并对以该帐号进行的所有活动及事件负法律责任。因黑客行为或会员保管疏忽致使帐号、密码被他人非法使用的，露意不承担任何责任。如您发现任何非法使用会员帐号或安全漏洞的情况，请立即与露意联系。
4．会员权责 
4.1 会员有权按照露意规定的程序和要求使用露意向会员提供的各项网络服务，如果会员对该服务有异议，可以与露意联系以便得到及时解决。
4.2 用户在申请使用露意网络服务时，必须向露意提供准确的个人资料，如 个人资料有任何变动，必须及时更新。
4.3 会员须同意接受露意通过电子邮件或其他方式向会员发送促销或其他相关商业信息。
4.4 会员在露意的网页上发布信息或者利用露意的服务时必须符合国家的法律法规以及国际法的有关规定。
4.5 对于会员通过露意网上消息平台（包括但不限于论坛、BBS、评论）上传到露意网站上可公开获取区域的任何内容，会员同意授予露意在全世界范围内享有完全的、免费的、永久性的、不可撤销的、非独家的权利，以及再许可第三方的权利，以使用、复制、修改、改编、出版、翻译、据以创作衍生作品、传播、表演和展示此等内容（整体或部分），和/或将此等内容编入当前已知的或以后开发的其他任何形式的作品、媒体或技术中。
4.6 会员承诺不会在露意的消息平台（包括但不限于论坛、BBS、评论）发布如下信息：
反对宪法所确定的基本原则的；
危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
损害国家荣誉和利益的；
煽动民族仇恨、民族歧视，破坏民族团结的；
破坏国家宗教政策，宣扬邪教和封建迷信的；
散布谣言，扰乱社会秩序，破坏社会稳定的； 
散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的； 
侮辱或者诽谤他人，侵害他人合法权益的；
含有法律、行政法规禁止的其他内容的。
4.7 会员单独为其发布在露意上信息承担责任。会员若在露意散布和传播违法信息，网络会员服务的系统记录有可能作为会员违法之证据。
4.8 会员不得利用本站的服务从事以下活动：
未经允许，进入计算机信息网络或者使用计算机信息网络资源；
未经允许，对计算机信息网络功能进行删除、修改或者增加； 
未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加； 
故意制作、传播计算机病毒等破坏性程序；
其他危害计算机信息网络安全的行为。
4.9 会员不得以任何方式干扰本站的服务。
4.10 会员承诺遵守本站的所有其他规定和程序。
4.11 如果会员违反上述规定，露意有权要求其改正或直接采取一切必要措施（包括但不限于更改或删除会员发布的信息、中断或终止会员使用网络的权利等），以减轻会员不当行为所造成的影响。
5．服务条款的修改
露意有权在必要时修改本服务条款而无需事先通知用户。露意行使该修改权，无需对用户或第三方承担任何责任。 会员如不同意修改，可以主动选择取消会员资格；如果会员继续使用露意服务，将被视为接受修改后的服务条款。
6．服务内容的修改或中断
鉴于网络服务的特殊性，露意保留随时修改或中断其部分或全部网络服务的权利，并无需通知会员或为此对会员及任何第三方负责。
7．会员隐私保护
露意尊重会员的隐私权，不会公开、编辑或泄露任何有关会员的个人资料以及会员在使用网络服务时存储在露意的非公开内容，但以下情况除外：
事先获得会员的明确授权；
遵守法律规定或露意合法服务程序；
按照相关政府主管部门的合理要求；
维护社会公众利益； 
维护露意的合法权益；
符合其他合法要求。
8．中断或终止服务
如发生下列任何一种情形，露意有权随时中断或终止向会员提供本协议项下的网络服务，而无需对会员或任何第三方承担任何责任。 会员向露意提供的个人资料不真实。
会员违反本协议的规则或不履行其所承担的义务。
除此之外，会员可随时根据需要通知露意终止向该会员提供服务，会员服务终止后，会员使用服务的权利同时终止。自会员服务终止之时起，露意不再对该会员承担任何责任。
9．知识产权
9.1 露意在网络服务中提供的任何文本、图片、图形、音频和视频资料均受版权、商标权以及其他相关法律法规的保护。未经露意事先同意，任何人不能擅自复制、传播这些内容，或用于其他任何商业目的，所有这些资料或资料的任何部分仅可作为个人或非商业用途而保存在某台计算机内。
9.2 露意为提供网络服务而使用的任何软件（包括但不限于软件中的任何文字、图形、音频、视频资料及其辅助资料）的一切权利属于该软件的著作权人，未经该著作权人同意，任何人不得对该软件进行反向工程、反向编译或反汇编。
9.3 如有著作权人发现会员在露意发表的内容侵犯其著作 权，并依《互联网著作权行政保护办法》、《信息网络传播保护条例》的规定向露意发出书面通知并提供相关内容的著作权权属证明的，露意有权在不事先通知会员的情况下自行移除相关内容，并依法保留相关数据。
9.4 若会员对9.3条指向内容依法享有发表权，可以向露意及9.3条指向之著作权人一并发出说明被移除内容不侵犯其著作权的反通知，反通知应为书面形式，并包含如下内容：
明确的身份证明、住址、联系方式； 
被移除内容的合法性证明； 
被移除内容在互联网上的位置； 
反通知内容的真实性声明。
符合规定的反通知发出后，露意有权恢复被移除内容。
10.预订返现
10.1 预订返现是指，通过露意预订酒店、机票、租车和商家服务，并消费成功后，在露意与合作商获得成功消费信息后的3天内，即可获得由露意给予的现金奖励，预订返现现金累积在“现金账户”中。
10.2 返现奖金累积存入您在露意的现金账户，会员现金账户余额达到50元时，即可申请提取现金。
10.3 会员现金账户余额永久有限，直到露意停止服务为止。
11．免责声明
11.1 露意对任何因会员不正当或非法使用服务、在网上进行交易、或会员传送信息变动而产生的直接、间接、偶然、特殊及后续的损害不承担责任。
11.2 露意对任何他人的威胁性的、诽谤性的、淫秽的、令人反感的或非法的内容或行为或对他人权利的侵犯（包括知识产权）不承担责任；并对任何第三方通过服务发送或在服务中包含的任何内容不承担责任。
11.3 会员明确同意其使用露意服务所存在的风险以及使用露意络服务产生的一切后果由其自己承担。
11.4 对于因不可抗力或露意不能控制的原因造成的网络服务中断或其它缺陷，露意不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。
11.5 露意不对所提供之网络服务做任何类型之担保，包括但不限于：
网络服务一定能满足会员要求；
网络服务不会中断； 
网络服务的及时性、安全性、准确性。
但是露意对不违反规定的特定目的担保不作限制。
12．赔偿
因会员对本服务之使用而导致露意遭受任何来自第三方之纠纷、诉讼及索赔要求，会员同意向露意及其关联企业、职员赔偿相应损失（包括合理的律师费），并尽力使之免受损害。
13．通告
所有发给会员的通告都可以通过重要页面的公告、电子邮件以及常规信件的形式传送。
14．法律
露意服务条款之效力、解释、执行均适用中华人民共和国法律。如发生争议，应提交至有管辖权之人民法院。
15．其他规定
本服务条款中的标题仅为方便而设，在解释本服务条款时应被忽略。"</string>
</resources>
