<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_top" android:background="@drawable/topbar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/img02" android:background="@drawable/layout_top_select_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_reg_name2" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_top">
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/txt_title_phone" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="请输入手机号码：" />
        <EditText android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/edittext_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:hint="请输入手机号码" android:singleLine="true" android:maxLength="11" android:numeric="integer" android:layout_below="@id/txt_title_phone" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/txt_title_code" android:background="@drawable/textview_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/txt_get_code" android:layout_below="@id/edittext_phone" />
        <EditText android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/edittext_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:hint="请输入短信验证码" android:singleLine="true" android:layout_below="@id/txt_title_code" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/txt_title_pwd" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="请输入密码：" android:layout_below="@id/edittext_code" />
        <EditText android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/edittext_pwd" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:hint="@string/txt_hint_password" android:password="true" android:singleLine="true" android:layout_below="@id/txt_title_pwd" />
    </RelativeLayout>
    <Button android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/btnRegister" android:background="@drawable/button_style2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:text="@string/txt_reg_name2" android:layout_below="@id/layout_phone" />
    <TextView android:textSize="14.0sp" android:textColor="@color/blue" android:id="@id/txt_haveluyi_account" android:background="@drawable/textview_style" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/txt_have_reg" android:layout_below="@id/btnRegister" android:layout_centerHorizontal="true" />
</RelativeLayout>
